--- a/index.html
+++ b/index.html
@@ -44,8 +44,11 @@
     <body>
         <div id="main">
             <div id="leftBar" class="col-xs-2"></div>
-            <div class="col-xs-8">                
-                <div class="col-xs-offset-4 col-xs-4" style="text-align: center">
+            <div class="col-xs-8"> 
+				<div class="col-xs-2">
+					something
+				</div>               
+                <div class="col-xs-offset-2 col-xs-4" style="text-align: center">
                     <img src="assets/Anima-RPG-Logo-small.png" alt="Anima Beyond Fantasy" title="Anima Beyond Fantasy">
                 </div>
                 <div id="mainContent" class="col-xs-12">
