--- a/index.html
+++ b/index.html
@@ -44,8 +44,9 @@
     <body>
         <div id="main">
             <div id="leftBar" class="col-xs-2"></div>
-            <div class="col-xs-8"> 
+            <div id="header" class="col-xs-8"> 
 				<div class="col-xs-2">
+					<button type="button" class="btn btn-light pull-right" data-toggle="modal" data-target="#modal-lg">Edit</button>
 					something
 				</div>               
                 <div class="col-xs-offset-2 col-xs-4" style="text-align: center">
@@ -53,7 +54,7 @@
                 </div>
                 <div id="mainContent" class="col-xs-12">
                     <!-- Nav Tabs -->
-                    <ul class="nav nav-tabs">
+                    <ul class="nav nav-tabs" role="tablist">
                         <li role="presentation" class="active"><a href="#base" aria-controls="base" role="tab" data-toggle="tab">Base Stats</a></li>
                         <li role="presentation"><a href="#adv" aria-controls="adv" role="tab" data-toggle="tab">Adv. and Disadv.</a></li>
                         <li role="presentation"><a href="#combat" aria-controls="combat" role="tab" data-toggle="tab">Combat</a></li>
@@ -67,59 +68,62 @@
                         <li role="presentation"><a href="#art" aria-controls="art" role="tab" data-toggle="tab">Artifacts</a></li>
                     </ul>
                     <!-- Tab Panes -->
-                    <div class="tab-content" class="tab-pane col-xs-12" id="base">
-                            <div class="col-xs-2">
-                                <div class="col-xs-12 form-group">
-									Base
-                                    <div class="input-group">
-                                        <input type="text" class="form-control base" placeholder="BASE">
-										<span class="input-group-addon">ACT</span>
-                                        <input type="text" class="form-control act" placeholder="ACT">
-										<span class="input-group-addon">BONUS</span>
-                                        <input type="text" class="form-control " placeholder="BONUS">
-                                    </div>
-									Special
-                                    <div class="input-group">
-                                        <input type="text" class="form-control" placeholder="Base">
-                                    </div>
-                                    <div class="input-group">
-                                        <span class="input-group-addon fat-addon">Actual</span>
-                                        <input type="text" class="form-control" placeholder="Base">
-                                    </div>
-                                </div>
-                                <div class="clearfix"></div>
-                                <div class="col-xs-12 form-group">
-                                    <div class="input-group">
-                                        <span class="input-group-addon fat-addon">Index</span>
-                                        <input type="text" class="form-control" placeholder="Base">
-                                    </div>
-                                    <div class="input-group">
-                                        <span class="input-group-addon fat-addon">Natural</span>
-                                        <input type="text" class="form-control" placeholder="Base">
-                                    </div>
-                                    <div class="input-group">
-                                        <span class="input-group-addon fat-addon">Max</span>
-                                        <input type="text" class="form-control" placeholder="Base">
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div role="tabpanel" class="tab-pane col-xs-12" id="adv"></div>
-                        <div role="tabpanel" class="tab-pane col-xs-12" id="combat"></div>
-                        <div role="tabpanel" class="tab-pane col-xs-12" id="SA"></div>
-                        <div role="tabpanel" class="tab-pane col-xs-12" id="magic"></div>
-                        <div role="tabpanel" class="tab-pane col-xs-12" id="sephirah"></div>
-                        <div role="tabpanel" class="tab-pane col-xs-12" id="psych"></div>
-                        <div role="tabpanel" class="tab-pane col-xs-12" id="ki"></div>
-                        <div role="tabpanel" class="tab-pane col-xs-12" id="tech"></div>
-                        <div role="tabpanel" class="tab-pane col-xs-12" id="util"></div>
-                        <div role="tabpanel" class="tab-pane col-xs-12" id="art"></div>
-                    </div>
+					<div class="tab-content" class="tab-pane col-xs-12">
+						<div role="tabpanel" class="tab-pane col-xs-12 active" id="base"></div>
+						<div role="tabpanel" class="tab-pane col-xs-12" id="adv">
+							<div class="col-xs-6">
+								<h3>Advantages</h3>
+								<br>
+								<div class="col-sm-10">
+									<ul class="list-group" id="advantages">
+										<li class="list-group-item"><span class="badge badge-secondary pull-left">2</span>&emsp;item<button type="button" class="close"><span aria-hidden="true">&times;</span></button></li>
+										<li class="list-group-item">item</li>
+										<li class="list-group-item">item</li>
+										<li class="list-group-item">item</li>
+										<li class="list-group-item">item</li>
+										<li class="list-group-item">item</li>
+									</ul>
+								</div>
+							</div>
+							<div class="col-xs-6">
+								<h3>Disadvantages</h3>
+								<br>
+								<div class="col-sm-10">
+									<ul class="list-group" id="advantages">
+										<li class="list-group-item">item</li>
+										<li class="list-group-item">item</li>
+										<li class="list-group-item">item</li>
+										<li class="list-group-item">item</li>
+										<li class="list-group-item">item</li>
+										<li class="list-group-item">item</li>
+									</ul>
+								</div>
+							</div>
+						</div>
+						<div role="tabpanel" class="tab-pane col-xs-12" id="combat"></div>
+						<div role="tabpanel" class="tab-pane col-xs-12" id="SA"></div>
+						<div role="tabpanel" class="tab-pane col-xs-12" id="magic"></div>
+						<div role="tabpanel" class="tab-pane col-xs-12" id="sephirah"></div>
+						<div role="tabpanel" class="tab-pane col-xs-12" id="psych"></div>
+						<div role="tabpanel" class="tab-pane col-xs-12" id="ki"></div>
+						<div role="tabpanel" class="tab-pane col-xs-12" id="tech"></div>
+						<div role="tabpanel" class="tab-pane col-xs-12" id="util"></div>
+						<div role="tabpanel" class="tab-pane col-xs-12" id="art"></div>
+						</div>
                 </div>
             </div>
             <div id="rightBar" class="col-xs-2">
                 <span id="versionInfo" class="label label-default"></span>
             </div>
         </div>
+		<div class="modal" role="dialog" id="modal-lg">
+			<div class="modal-dialog modal-lg" role="document">
+				<div class="modal-content">
+					<div class="modal-header" id="modal-header"></div>
+					<div class="modal-body" id="modal-body"></div>
+					<div class="modal-footer" id="modal-footer"></div>
+				</div>
+			</div>
+		</div>
     </body>
 </html>
