--- a/index.html
+++ b/index.html
@@ -23,14 +23,19 @@
         <!-- Custom JS -->
         <script src="js/Models/BaseStatsModel.js"></script>
         <script src="js/Views/BaseStatsView.js"></script>
+        <script src="js/Models/CharacterInfoModalModel.js"></script>
+        <script src="js/Views/CharacterInfoModalView.js"></script>
+        <script src="js/Views/AdvDisadvView.js"></script>
         <script src="js/Views/ViewController.js"></script>
 		
+		<script src="js/util.js"></script>
 		<!-- Data JS -->
 		<script src="data/releaseInfo.js"></script>
         
         <!-- Page JS -->
         <script type="text/javascript">
             $(document).ready(function() {
+				init();
                 loadVersionInfo(releaseInfo);
                 var mainController = new ViewController();
             });
@@ -45,11 +50,11 @@
         <div id="main">
             <div id="leftBar" class="col-xs-2"></div>
             <div id="header" class="col-xs-8"> 
-				<div class="col-xs-2">
-					<button type="button" class="btn btn-light pull-right" data-toggle="modal" data-target="#modal-lg">Edit</button>
+				<div class="col-xs-3">
+					<button id="editCharInfo" type="button" class="btn btn-light pull-right" data-toggle="modal" data-target="#modal-lg">Edit</button>
 					something
 				</div>               
-                <div class="col-xs-offset-2 col-xs-4" style="text-align: center">
+                <div class="col-xs-offset-1 col-xs-4" style="text-align: center">
                     <img src="assets/Anima-RPG-Logo-small.png" alt="Anima Beyond Fantasy" title="Anima Beyond Fantasy">
                 </div>
                 <div id="mainContent" class="col-xs-12">
