refactored some classes stuff and worked on advantages and disadvantages.  I still need to finish base stats though ;/

--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
 					<div class="tab-content" class="tab-pane col-xs-12">
 						<div role="tabpanel" class="tab-pane col-xs-12 active" id="base"></div>
 						<div role="tabpanel" class="tab-pane col-xs-12" id="adv">
+							<br>
 							<div class="col-xs-6">
 								<h3>Advantages</h3>
 								<br>
@@ -88,6 +89,7 @@
 										<li class="list-group-item">item</li>
 										<li class="list-group-item">item</li>
 									</ul>
+								<button class="btn btn-success pull-right"><span class="glyphicon glyphicon-plus" aria-hidden="true"></span></button>
 								</div>
 							</div>
 							<div class="col-xs-6">
@@ -102,6 +104,7 @@
 										<li class="list-group-item">item</li>
 										<li class="list-group-item">item</li>
 									</ul>
+								<button class="btn btn-danger pull-right"><span class="glyphicon glyphicon-plus" aria-hidden="true"></span></button>
 								</div>
 							</div>
 						</div>
