--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
         <script src="js/Views/BaseStatsView.js"></script>
         <script src="js/Models/CharacterInfoModalModel.js"></script>
         <script src="js/Views/CharacterInfoModalView.js"></script>
+        <script src="js/Views/AdvantagesModalView.js"></script>
         <script src="js/Views/AdvDisadvView.js"></script>
         <script src="js/Views/ViewController.js"></script>
 		
@@ -51,7 +52,7 @@
             <div id="leftBar" class="col-xs-2"></div>
             <div id="header" class="col-xs-8"> 
 				<div class="col-xs-3">
-					<button id="editCharInfo" type="button" class="btn btn-light pull-right" data-toggle="modal" data-target="#modal-lg">Edit</button>
+					<button id="editCharInfo" type="button" class="btn btn-light pull-right" >Edit</button>
 					something
 				</div>               
                 <div class="col-xs-offset-1 col-xs-4" style="text-align: center">
@@ -126,7 +127,7 @@
         </div>
 		<div class="modal" role="dialog" id="modal-lg">
 			<div class="modal-dialog modal-lg" role="document">
-				<div class="modal-content">
+				<div class="modal-content" id="modal-content">
 					<div class="modal-header" id="modal-header"></div>
 					<div class="modal-body" id="modal-body"></div>
 					<div class="modal-footer" id="modal-footer"></div>
